mostly done, just need to add fa icons

--- a/about.html
+++ b/about.html
@@ -5,13 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
-    <!-- ABOUT PAGE -->
+    <h1>About Us</h1>
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html" id="current-page">About</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
-    <main>
-        <!-- About page code here -->
+    <div id="banner">
+        <img id="banner" src="./assets/images/banner.png" alt="Banner logo."/>
+    </div>
+    <!-- ABOUT PAGE --> 
+    <main>        
+        <h2>Locations</h2>
+            <ul>
+                <li>Kalamazoo, Michigan</li>
+                <li>Washington, D.C.</li>
+                <li>Los Angeles, California</li>
+                <li>Miami, Florida</li>
+            </ul>
+        <h2>Origin Story</h2>
+            <p>Kalamazoo was the perfect place to open our first restaurant. The city is beautiful, full of culture, and a lot of hungry people!</p>
+            <img src="./assets/images/about.jpg" alt="Signature dishes."/>
     </main>
 </body>
 </html>
