--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
+    <link 
+        rel="stylesheet" 
+        href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+        crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
+    <h1>Contact Us</h1>
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./contact.html" id="current-page">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img id="banner" src="./assets/images/banner.png" alt="Banner logo."/>
+    </div>
+    <!--Main Contact Page-->
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -19,9 +36,10 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-        <p>
-            <strong>Phone Number:</strong> TBD
-        </p>
+            <a href="mailto: hthaiml@hthaiml.com">hthaiml@hthaiml.com</a>
+            <br><br>
+            <i class="fa fa-phone" aria-hidden="true"></i><a href="tel 123-456-7890">123-456-7890</a>
+            <p>123 Food St. Kalamazoo, MI</p>
     </main>
 </body>
 </html>
