--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
 </head>
 <body>
     <!-- HOME PAGE -->
+    <h1>H-Thai-ML</h1>
+    <h2>Markedly awesome.</h2>
     <!-- TODO: Navbar here -->
+    <nav>
+        <a href="./index.html" id="current-page">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./menu.html">Menu</a>
+        <a href="./contact.html">Contact</a>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img id="banner" src="./assets/images/banner.png" alt="Banner logo."/>
+    </div>
+    <!-- TODO: Home page code here-->
     <main>
-        <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+    <div class="service">
+        <h3>Dine In</h3>
+            <p></p>
+    </div>
+    <div class="service">
+        <h3>Take Out</h3>
+    </div>
+    <div class="service">
+        <h3>Delivery</h3>
+    </div>
+
+    <img src="./assets/images/table-in-restaurant.jpg" alt="photo of our restaurant"/>
     </main>
+
 </body>
 </html>
