added final icons

--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,10 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-            <a href="mailto: hthaiml@hthaiml.com">hthaiml@hthaiml.com</a>
+            <i class="fa fa-envelope-square" aria-hidden="true"></i><a href="mailto: hthaiml@hthaiml.com">hthaiml@hthaiml.com</a>
             <br><br>
             <i class="fa fa-phone" aria-hidden="true"></i><a href="tel 123-456-7890">123-456-7890</a>
-            <p>123 Food St. Kalamazoo, MI</p>
+            <i class="fa fa-map-o" aria-hidden="true"></i><p>123 Food St. Kalamazoo, MI</p>
     </main>
 </body>
 </html>
