final commit all icons are there

--- a/contact.html
+++ b/contact.html
@@ -36,10 +36,14 @@
             <strong>Saturday-Sunday:</strong> 1:00pm-10:00pm
         </p>
         <h2>Contact Info</h2>
-            <i class="fa fa-envelope-square" aria-hidden="true"></i><a href="mailto: hthaiml@hthaiml.com">hthaiml@hthaiml.com</a>
-            <br><br>
-            <i class="fa fa-phone" aria-hidden="true"></i><a href="tel 123-456-7890">123-456-7890</a>
-            <i class="fa fa-map-o" aria-hidden="true"></i><p>123 Food St. Kalamazoo, MI</p>
     </main>
+    <footer>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <a href="mailto: hthaiml@hthaiml.com">hthaiml@hthaiml.com</a>
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <a href="tel 123-456-7890">123-456-7890</a>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <p>123 Food St. Kalamazoo, MI</p>
+    </footer>
 </body>
 </html>
